# opentrack

tracker-alt/: Antilatency.Math.float3.h  Antilatency.Math.floatQ.h  CMakeLists.txt  antilatency_tracker_alt.cpp  antilatency_tracker_alt.h  antilatency_tracker_alt.qrc  antilatency_tracker_alt_controls.ui  antilatency_tracker_alt_dialog.cpp  antilatency_tracker_alt_dialog.h  antilatency_tracker_alt_settings.h
tracker-alt/lang/: stub.ts
