set(SDK_ALT "" CACHE PATH "")

if(SDK_ALT)
    if(WIN32)
        include_directories("${SDK_ALT}/include/")
        otr_module(tracker-alt)
	    if(opentrack-64bit)
            set(archFolder "win/x64")
        else()
            set(archFolder "win/x86")
        endif()
	    install(DIRECTORY "${SDK_ALT}/bin/${archFolder}/" DESTINATION "${CMAKE_INSTALL_PREFIX}/modules" FILES_MATCHING PATTERN "*.dll")
    endif()
endif()
