#set(SDK_ALT "" CACHE PATH "")
set(SDK_ALT $ENV{SDK_ALT})

if(SDK_ALT)
    if(WIN32)
        include_directories("${SDK_ALT}/Api/")
        otr_module(tracker-alt)
	    if(opentrack-64bit)
            set(archFolder "Bin/Windows/x64")
        else()
            set(archFolder "Bin/Windows/x86")
        endif()
	    install(DIRECTORY "${SDK_ALT}/bin/${archFolder}/" DESTINATION "${CMAKE_INSTALL_PREFIX}/modules" FILES_MATCHING PATTERN "*.dll")
    endif()
endif()
